<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout">


        <ImageView
            android:id="@+id/imgHeaderView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nav_menu_header_bg"
        />

        <ImageView
            android:id="@+id/imgProfile"
            android:clickable="true"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/imgHeaderView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src = "@drawable/man"
            />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgHeaderView"
            android:background="@color/RedColor"
            android:paddingBottom="24dp">

            <ImageButton
                android:id="@+id/btnEditPic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/RedColor"
                android:src="@drawable/ok" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/Name"
                android:textColor="@color/WhiteColor"
                android:textSize="30sp"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <!-- NN Group Text -->
        <LinearLayout
            android:id="@+id/nn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/profile_layout"
            android:layout_margin="5dp"
            android:gravity="end"
            >

            <EditText
                android:id="@+id/edtNnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nnumber"
                android:inputType="text"
                android:textSize="@dimen/Profile_edit_size"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/txtNnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nnumber_group"
                android:textSize="@dimen/Profile_text_size"
                />
        </LinearLayout>

        <!-- Education Group Text -->
        <LinearLayout
            android:id="@+id/education_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/nn_layout"
            android:layout_margin="5dp"
            android:gravity="end"
            >

            <EditText
                android:id="@+id/edtEducation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Education"
                android:inputType="text"
                android:textSize="@dimen/Profile_edit_size"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/txtEducation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_group"
                android:textSize="@dimen/Profile_text_size"
                />
        </LinearLayout>

        <!-- Work Group Text -->
        <LinearLayout
            android:id="@+id/work_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/education_layout"
            android:layout_margin="5dp"
            android:gravity="end"
            >

            <EditText
                android:id="@+id/edtWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:inputType="text"
                android:textSize="@dimen/Profile_edit_size"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/txtWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_group"
                android:textSize="@dimen/Profile_text_size"
                />
        </LinearLayout>

        <!-- Age Group Text -->
        <LinearLayout
            android:id="@+id/age_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/work_layout"
            android:layout_margin="5dp"
            android:gravity="end"
            >

            <EditText
                android:id="@+id/edtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:inputType="number"
                android:textSize="@dimen/Profile_edit_size"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_group"
                android:textSize="@dimen/Profile_text_size"
                />
        </LinearLayout>

        <!-- Mobile Group Text -->
        <LinearLayout
            android:id="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/age_layout"
            android:layout_margin="5dp"
            android:gravity="end"
            >

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:inputType="phone"
                android:textSize="@dimen/Profile_edit_size"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/txtMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_group"
                android:textSize="@dimen/Profile_text_size"
                />
        </LinearLayout>

        <!-- Email Group Text -->
        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/mobile_layout"
            android:layout_margin="5dp"
            android:gravity="end"
            >

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/Profile_edit_size"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_group"
                android:textSize="@dimen/Profile_text_size"
                />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>